# mtuci-os

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
lab1/: main.py
lab2/: main.py
src/: api.py  cli.py  client.py  consts.py  log_server.py  server.py  types_.py
src/models/: base.py  common.py  request.py  response.py
src/utils/: messagging.py  monitor.py  proc.py
